--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.9",
+    "jwt-check-expiration": "^1.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
